# machine-learning

./: .gitignore  README.md
deep_learning/: pyproject.toml
llm/: LLMFineTuning.ipynb
pix2pix/: pix2pix_test.ipynb
pix2pix/.ipynb_checkpoints/: pix2pix_test-checkpoint.ipynb
tensorflow_test/: tensorflow_test.ipynb  tensorflow_test.py
ultralytics_demo/: README  custom_data.yaml  object_tracking.py  object_tracking_draw.py  object_tracking_streaming.py  test_tracking.ipynb  yolov8_training.py
underwater_object/: CVAT_annotation.ipynb  CamCalibrator.ipynb  ColorCorrection.ipynb  DataCleanUp.ipynb  OpenCVPostProcessing.ipynb  OpenImageTest.ipynb  UOTImagesDataLocation.txt  yolov8_nas_training.py  yolov8_obb_training.py  yolov8_training.py
underwater_object/UOT100Images/labels/uot100/: 000000000.txt  0000000010.txt  00000000125.txt  00000000129.txt  00000000130.txt  00000000141.txt  00000000145.txt  00000000158.txt  00000000189.txt  00000000196.txt  00000000200.txt  00000000206.txt  00000000208.txt  00000000210.txt  0000000022.txt  00000000231.txt  00000000240.txt  00000000257.txt  00000000259.txt  0000000026.txt  00000000267.txt  00000000280.txt  00000000282.txt  00000000286.txt  0000000029.txt  00000000294.txt  00000000300.txt  00000000306.txt  00000000308.txt  0000000032.txt  00000000320.txt  00000000328.txt  00000000334.txt  00000000336.txt  00000000337.txt  00000000339.txt  00000000344.txt  00000000349.txt  00000000358.txt  (+1028 more)
underwater_object/YOLO_configs/: openimage_shrimp.yaml  shrimp_train_v1.yaml  shrimp_train_v2.yaml
vision_transformers/: vit.ipynb
